	  KEY_MOUSE. (DLR)
	- Don't blow away the cutbuffer when we get a shortcut and the
	  function associated with it is do_cut_till_end(). (DLR)
	- Simplify the routine to preserve the cutbuffer when we call a
	  cutting or copying function associated with a shortcut. (DLR)
- nano.h:
	- Reorder the toggle #defines to match their corresponding order
	  in toggle_init(). (DLR)
- prompt.c:
  get_prompt_string()
	- Include the handling of the help key even when help is
	  disabled, so that we aren't erroneously kicked out of the
	  statusbar prompt under any circumstances. (DLR, found by Benno
	  Schulenberg)
  do_statusbar_input()
	- Remove redundant check for allow_funcs' being TRUE when we get
	  KEY_MOUSE. (DLR)
	- Improve the handling of NANO_REFRESH_KEY. (DLR)
  total_statusbar_refresh()
	- New function, called when we get NANO_REFRESH_KEY in
	  do_statusbar_input(). (DLR)
  do_yesno_prompt()
	- Handle the keys in a switch statement instead of a long if
	  block, for simplicity. (DLR)
- rcfile.c:
  parse_argument()
	- Rename variable ptr_bak to ptr_save, for consistency. (DLR)
	- Add quotes around invalid string arguments in error messages,
	  for consistency. (DLR)
  parse_syntax()
	- Don't generate an error if we find a duplicate syntax name,
	  since we might be trying to override a syntax in the global
	  nanorc with one in our local nanorc.  Instead, free any
	  duplicate syntaxes we find, so that we always use the last
	  syntax with a given name. (DLR)
  color_to_short()
	- Add quotes around invalid string arguments in error messages,
	  for consistency. (DLR)
  parse_colors()
	- Check for a color command's not following a syntax line before
	  anything else. (DLR)
	- Add quotes around invalid string arguments in error messages,
	  for consistency. (DLR)
  parse_rcfile()
	- Properly generate an error if we've read in a syntax without
	  any associated color commands. (DLR)
	- Change variable i from an int to a size_t, for consistency.
	  (DLR)